--- a/app/package.json
+++ b/app/package.json
@@ -2,17 +2,18 @@
   "author": "Marvin Fastenau<marvin@apfelkuchenwege.tk>",
   "name": "pixelrust-fronend",
   "version": "0.1.0",
+  "license": "MIT",
   "scripts": {
     "build": "rimraf dist pkg && webpack",
-    "start": "rimraf dist pkg && webpack-dev-server --open -d",
+    "start": "rimraf dist pkg && webpack-dev-server --open",
     "test": "cargo test && wasm-pack test --headless"
   },
   "devDependencies": {
-    "@wasm-tool/wasm-pack-plugin": "^1.1.0",
-    "copy-webpack-plugin": "^5.0.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.3",
-    "webpack-dev-server": "^3.7.1",
-    "rimraf": "^3.0.0"
+    "@wasm-tool/wasm-pack-plugin": "1.7.0",
+    "copy-webpack-plugin": "12.0.2",
+    "rimraf": "5.0.5",
+    "webpack": "5.90.1",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "4.15.1"
   }
 }
