--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "pixelrust"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
+repository = "https://github.com/HyperTNTClown/pixelrust"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
