--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -3,6 +3,8 @@ name = "pixelrust-frontend-wasm"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
+repository = "https://github.com/HyperTNTClown/pixelrust"
+description = "PixelRust frontend compiled to WebAssembly"
 
 [lib]
 crate-type = ["cdylib"]
@@ -14,7 +16,7 @@ opt-level = 3
 [dependencies]
 wasm-bindgen = "0.2.90"
 wasm-bindgen-futures = "0.4.40"
-web-sys = { version = "0.3.67", features = ["console", "HtmlCanvasElement", "CanvasRenderingContext2d", "Window", "Document", "Response", "Blob", "ImageData", "EventSource", "MessageEvent", "EventListener", "TextEncoder", "Performance", "WebSocket"] }
+web-sys = { version = "0.3.67", features = ["console", "HtmlCanvasElement", "CanvasRenderingContext2d", "Window", "Document", "Response", "Blob", "ImageData", "EventSource", "MessageEvent", "EventListener", "TextEncoder", "Performance", "WebSocket", "Location", "Headers"] }
 console_error_panic_hook = "0.1.7"
 rapid-qoi = "0.6.1"
 base64 = "0.21.7"
