--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "rimraf dist pkg && webpack",
     "start": "rimraf dist pkg && webpack-dev-server --open",
-    "test": "cargo test && wasm-pack test --headless"
+    "test": "cargo test && wasm-pack test --headless",
+    "clean": "cargo clean && rm -Rf dist pkg node_modules"
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "1.7.0",
