--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,11 @@ repository = "https://github.com/HyperTNTClown/pixelrust"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "full"] }
+tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
 rapid-qoi = "0.6.1"
-rayon = "1.8.1"
-crossbeam-channel = "0.5.11"
-brotli = "3.4.0"
-deflate = { version = "1.0.0", features = ["gzip"] }
 fdeflate = "0.3.4"
 base64 = "0.21.7"
-fastwebsockets = { version = "0.6.0", features = ["upgrade"] }
+fastwebsockets = "0.6.0"
 sha1 = "0.11.0-pre.3"
 
 [profile.release]
