--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/HyperTNTClown/pixelrust"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
+tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs"] }
 rapid-qoi = "0.6.1"
 fdeflate = "0.3.4"
 base64 = "0.21.7"
